# SDLHero

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile
src/: handmade.cpp  handmade.hpp  main.c  sdl_main.cpp  sdl_main.hpp
